# NyxUI

./: CMakeLists.txt  README.md  codeeditor.cpp  codeeditor.h  grid.cpp  grid.h  highlighter.cpp  linenumberwidget.cpp  mainwindow.cpp  mainwindow.h  map  nyxgame.nx  nyxsyscallsinterface.cpp  nyxsyscallsinterface.h  renderer.cpp  renderer.h  resources.qrc  test.nx
game/: gameinfo.cpp  gameinfo.h  gamestatus.h  grid.cpp  grid.h
nyx/: nyxsyscallsinterface.cpp  nyxsyscallsinterface.h
ui/: codeeditor.cpp  highlighter.cpp  highlighter.h  linenumberwidget.h  mainwindow.cpp  mainwindow.h  renderer.cpp  renderer.h
